--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 .displayButton{
-    width:50px;
-    height:50px;
+    width:60px;
+    height:60px;
+}
+.eqButton{
+  width:60px;
+  height:60px;
+}
+.cButton{
+  width:60px;
+  height:60px;
+}
+input{
+  width:235px;
+  height:60px;
 }
