added mario theme

--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
+body{
+  text-align:center;
+  background-image:url('https://images4.alphacoders.com/288/thumb-1920-2884.jpg');
+background-size: 100%;
+
+}
+
 .displayButton{
     width:60px;
     height:60px;
+    font-family: 'Arial Rounded MT Bold';
+    color: white;
+    background-color: #2ECC71;
+text-align:center;
+
+
 }
 .eqButton{
   width:60px;
   height:60px;
+  font-family: 'Arial Rounded MT Bold';
+  background-color: #00B2FF;
+text-align:center;
 }
 .cButton{
   width:60px;
   height:60px;
+  font-family: 'Arial Rounded MT Bold';
+text-align:center;
+background-color: #FFC300;
 }
 input{
-  width:235px;
+  width:232px;
   height:60px;
+  font-family: 'Arial Rounded MT Bold';
+text-align:center;
+
 }
